--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -30,7 +30,7 @@
           <mat-icon>wb_sunny</mat-icon>
         </div>
       </ng-template>
-      <mat-slide-toggle [(ngModel)]="isDarkTheme" labelPosition="before" >
+      <mat-slide-toggle [(ngModel)]="isDarkTheme" (change)="storeThemeSelection()">
       </mat-slide-toggle>    
     </mat-toolbar>
     <!-- Add Content Here -->
